--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,105 +1,90 @@
-/* Styles généraux pour la page */
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
+  background-color: #1F262E;
+  margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
 }
 
-nav {
-    background-color: #333;
-    padding: 10px 0;
+
+#header {
+  background-color: #262D35;
+  color: #fff;
+  width: 100%;
+  padding: 20px 0;
+  text-align: center;
+  position: relative;
+  top: 0;
+  left: 0;  
 }
 
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+#deconnexion{
+  width:70px;
+}
+
+#profile-link {
+  text-decoration: none;
+  color:rgb(255, 255, 255);
+}
+
+#right-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+ #header-container {
     display: flex;
-    justify-content: center;
-}
+    height:100px;
+    align-items: center;
+    justify-content: space-between;
+    
+  }
 
-nav ul li {
-    position: relative;
-}
+  #image-logo {
+    width:100px;
+  }
 
-nav ul li a {
-    color: white;
-    text-decoration: none;
-    padding: 14px 20px;
-    display: block;
-    transition: background-color 0.3s;
-}
+  .search {
+    width: 500px;
+    height: 40px;
+    margin: 150px auto;
+    background: #444;
+    background: rgba(0,0,0,.2);
+    border-radius:  3px;
+    border: 1px solid #fff;
+  }
 
-nav ul li a:hover {
-    background-color: #575757;
-}
+   input {
+      width: 370px;
+      padding: 10px 5px;
+      float: left;
+      color: #000000;
+      border: 0;
+      background: transparent;
+      border-radius: 3px 0 0 3px;
+      &:focus {
+        outline: 0;
+        background:transparent;
+      }
+    }
+    
+    button {
+      position: relative;
+      float: right;
+      border: 0;
+      padding: 0;
+      cursor: pointer;
+      height: 40px;
+      width: 130px;
+      background: transparent; 
+      border-left: 1px solid #fff;
+  }
 
-/* Styles pour le dropdown */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: white;
-    min-width: 200px;
-    box-shadow: 0 8px 16px rgba(0,0,0,0.2);
-    z-index: 1;
-    right: 0;
-    top: 50px;
-    border-radius: 4px;
-    overflow: hidden;
-}
-
-.dropdown-content h2 {
-    background-color: #333;
-    color: white;
-    margin: 0;
-    padding: 10px;
-    text-align: center;
-    font-size: 18px;
-}
-
-.dropdown-content p {
-    padding: 10px;
-    margin: 0;
-    border-bottom: 1px solid #f1f1f1;
-}
-
-.dropdown-content p:last-child {
-    border-bottom: none;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-/* Styles pour le reste du contenu */
-h1 {
-    text-align: center;
-    margin-top: 50px;
-    color: #333;
-}
-
-/* Styles pour les topics */
-#topics-container {
-    margin: 20px;
-}
-
-.topic {
-    border: 1px solid #ccc;
-    padding: 15px;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    background-color: white;
-}
-
-.topic h2 {
-    margin: 0 0 10px 0;
-}
-
-.topic p {
-    margin: 5px 0;
-}
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
+  button:hover {
+    background: rgba(255, 255, 255, 0.137);
+    color: #4b4b4b;
+  }
+  @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
 
 
 *{
@@ -143,9 +128,6 @@ header{
     background: var(--color-esqueleto);
     margin: 20px;
 }
-
-/*Aquí debajo va el FOOTER*/
-
 footer{
     width: 100%;
     padding: 50px 0px;
