--- a/public/styles.css
+++ b/public/styles.css
@@ -13,6 +13,8 @@ background-color: #1F262E;
 color:white;
 }
 
+
+
 nav {
     background-color: #262D35;
     padding: 10px 0;
@@ -105,11 +107,14 @@ h1 {
     margin-bottom: 10px;
     border-radius: 5px;
     background-color: #262D35;
+    width:1000px;
 }
 
 .topic h2 {
     margin: 0 0 10px 0;
 }
+
+
 
 #topic-link {
     text-decoration: none;
@@ -246,6 +251,14 @@ footer{
 }
 
 
+#container-right {
+    display: flex;
+    flex-direction: column;
+    align-items:start;
+    width:60%;
+
+}
+
 #container-main-left{
 display: flex;
 flex-direction: column;
@@ -260,6 +273,7 @@ width:300px;
     border-radius: 20px ;
     width:200px;
     height:100px;
+    margin-left: 20px;
     text-align: center;
     align-content: center;
 }
@@ -323,18 +337,9 @@ h1 {
     color: #333;
 }
 
-/* Styles pour les topics */
-#topics-container {
-    margin: 20px;
-}
 
-.topic {
-    border: 1px solid #ccc;
-    padding: 15px;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    background-color: white;
-}
+
+
 
 .topic h2 {
     margin: 0 0 10px 0;
@@ -369,32 +374,86 @@ h1 {
     color: white;
 }
 
-/* Styles pour le popup */
+.friend-request {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    border-bottom: 1px solid #ccc;
+}
+
+.friend-request img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.friend-request button {
+    margin-left: auto;
+}
+
 .popup {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    z-index: 1000;
 }
 
 .popup-content {
-    background-color: white;
     padding: 20px;
-    border-radius: 10px;
-    max-height: 80%;
-    overflow-y: auto;
 }
 
-.close-button {
+.popup .close-button {
     position: absolute;
     top: 10px;
     right: 10px;
     cursor: pointer;
     font-size: 20px;
-    font-weight: bold;
+}
+
+.profile-pic        {
+    border-radius: 100%;
+    width:70px;
+}
+
+
+#create-topic {
+    display: flex;
+    align-content: center;
+    background-color:yellow;
+    justify-content: center;
+    width:300px;
+    justify-content: space-around;
+}
+
+
+#create-text {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+
+}
+
+#create-text:hover {
+    transform: scale(1.1);
+
+}
+
+#create {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: yellow;
+}
+
+#user-profile-pic-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color:white;
+    height: 100px;
 }
