--- a/public/styles.css
+++ b/public/styles.css
@@ -114,6 +114,25 @@ h1 {
     margin: 0 0 10px 0;
 }
 
+#author {
+    color: white;
+}
+
+#user-info {
+    display: flex;
+    align-items: center;
+    gap:20px;
+}
+
+.tag {
+    display: inline-block;
+    background-color: #e0e0e0;
+    color: #333;
+    padding: 5px 10px;
+    margin: 5px;
+    border-radius: 15px;
+    font-size: 0.9em;
+}
 
 
 #topic-link {
@@ -416,11 +435,16 @@ h1 {
     font-size: 20px;
 }
 
-.profile-pic        {
-    border-radius: 100%;
-    width:70px;
+.profile-pic {
+    border-radius: 60%;
+    width:80px;
+    height:80px;
 }
 
+#title-topic {
+    color: white;
+    font-size: 40px;
+}
 
 #create-topic {
     display: flex;
