--- a/public/styles.css
+++ b/public/styles.css
@@ -13,6 +13,32 @@ background-color: #1F262E;
 color:white;
 }
 
+#liked {
+font-size: 30px;
+display: flex;
+flex-direction: column;
+align-items: center;
+gap:7px;
+}
+
+#show-all-liked-topics {
+    height:50px;
+    border: none;
+    background-color: #262D35;
+    color:white;
+    border-radius: 20px;
+    width:170px;
+
+}
+
+
+#liked-topics-container {
+display: flex;
+flex-direction: column;
+align-items: center;
+height:50px;
+
+}
 
 
 nav {
@@ -308,18 +334,31 @@ width:300px;
 }
 
 .text {
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: 20px;
     margin-top: 30px;
 }
 
+#separation {
+    border: solid black 1px;
+    width: 80%;
+    margin-left: 28px;
+}
+
 #top-left-container {
-    background-color: rgb(73, 73, 73);
-    color:white;
+    color:rgb(0, 0, 0);
 }
 
 #bot-left-container {
-    background-color: rgb(108, 108, 108);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap:20px;
+    margin-top:-30px;
+}
+
+#popularite {
+    color:black;
 }
 
 /* Styles pour le dropdown */
@@ -466,6 +505,36 @@ h1 {
     transition: background-color 0.3s;
 }
 
+
+#delete-topic{
+    background-color: #ffc107;
+    color: black;
+    border: none;
+    border-radius: 4px;
+    padding: 5px 10px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+#message-body {
+    width:200px;
+    height:100px;
+}
+
+#addMessageForm {
+    background-color: #333;
+}
+
+#edit-topic {
+    background-color: #168516;
+    color: black;
+    border: none;
+    border-radius: 4px;
+    padding: 5px 10px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
 .message .delete-message:hover {
     background-color: #e0a800;
 }
@@ -525,6 +594,28 @@ h1 {
 .popup-content {
     padding: 20px;
 }
+
+/* Style pour le bouton de fermeture */
+.close-button {
+    cursor: pointer;
+    font-size: 30px;
+    position: absolute;
+    right: 10px;
+    color:black;
+    top: 5px;
+}
+
+/* Style pour les boutons de "liked topics" et "popular topics" */
+#show-all-liked-topics, #show-all-popular-topics {
+    height: 50px;
+    border: none;
+    background-color: #262D35;
+    color: white;
+    border-radius: 20px;
+    width: 170px;
+}
+
+
 
 .popup .close-button {
     position: absolute;
