--- a/public/index.css
+++ b/public/index.css
@@ -7,14 +7,21 @@ body {
     font-family: rubik;
     margin: 0;
     padding: 0;
-    background-color: #f5f5f5;
-    color: #333;
+    background-color: #1F262E;
+    color: white;
+}
+
+#profileImage {
+    width:120px;
+    border-radius: 50%;
+    height:100px;
+
 }
 
 nav ul {
     list-style-type: none;
     padding: 0;
-    background-color: #333;
+    background-color: #262D35;
     text-align: center;
     margin: 0;
 }
@@ -48,6 +55,7 @@ h1 {
 form {
     max-width: 500px;
     margin: 20px auto;
+    color:black;
     padding: 20px;
     background-color: white;
     border-radius: 5px;
@@ -58,6 +66,8 @@ form label {
     display: block;
     margin-bottom: 5px;
     font-weight: bold;
+    font-size: 20px;
+    color: black;
 }
 
 form input[type="text"],
@@ -74,7 +84,7 @@ form button {
 }
 
 form button[type="submit"] {
-    background-color: #007BFF;
+    background-color: #1F262E;
     color: white;
     border: none;
     cursor: pointer;
@@ -86,7 +96,7 @@ form button[type="submit"]:hover {
 }
 
 #nextProfileImage {
-    background-color: #28a745;
+    background-color: #1F262E;
     color: white;
     border: none;
     cursor: pointer;
@@ -94,7 +104,7 @@ form button[type="submit"]:hover {
 }
 
 #nextProfileImage:hover {
-    background-color: #218838;
+    background-color: green ;
 }
 
 #loginButton {
@@ -111,12 +121,16 @@ form button[type="submit"]:hover {
     transition: background-color 0.3s ease;
 }
 
+#loginForm {
+color: black;
+}
+
 #loginButton:hover {
     background-color: #e0a800;
 }
 
 footer {
-    background-color: #333;
+    background-color: #262D35;
     color: white;
     padding: 20px 0;
     text-align: center;
