--- a/public/login.css
+++ b/public/login.css
@@ -7,14 +7,14 @@ body {
     font-family: rubik;
     margin: 0;
     padding: 0;
-    background-color: #f5f5f5;
-    color: #333;
+    background-color: #1F262E;
+    color: white;
 }
 
 nav ul {
     list-style-type: none;
     padding: 0;
-    background-color: #333;
+    background-color: #262D35;
     text-align: center;
     margin: 0;
 }
@@ -52,6 +52,8 @@ form label {
     display: block;
     margin-bottom: 5px;
     font-weight: bold;
+    font-size: 20px;
+    color: black;
 }
 
 form input[type="text"],
@@ -67,8 +69,8 @@ form input[type="password"] {
 form button[type="submit"] {
     width: 100%;
     padding: 10px;
-    background-color: #007BFF;
-    color: white;
+    background-color: #1F262E;
+    color: white;   
     border: none;
     border-radius: 5px;
     cursor: pointer;
